Cleaning up responses and classes.
